--- a/docs/pages/_app.mdx
+++ b/docs/pages/_app.mdx
@@ -1,3 +1,16 @@
+import Script from "next/script";
+
 export default function App({ Component, pageProps }) {
-  return <Component {...pageProps} />;
+  return (
+    <>
+      <Component {...pageProps} />
+      <Script
+        defer
+        id="plausible-analytics"
+        strategy="afterInteractive"
+        data-domain="metaprocessor.org"
+        src={"https://plausible.io/js/plausible.js"}
+      />
+    </>
+  );
 }
