documentation site basic structure

--- a/docs/pages/index.mdx
+++ b/docs/pages/index.mdx
@@ -1,4 +1,8 @@
+---
+title: "MetaProcessor"
+description: "MetaProcessor, all-in-one data pipeline for MbientLab MetaWear series sensors!"
+---
+
 # Introduction
 
 MetaProcessor, all-in-one data pipeline for MbientLab MetaWear series sensors!
-
