add initial config doc

--- a/docs/pages/docs/config.mdx
+++ b/docs/pages/docs/config.mdx
@@ -4,3 +4,22 @@ description: "Guide for configuring MetaProcessor."
 ---
 
 # Configuring MetaProcessor
+
+This section covers configurations options.
+
+## Initialization
+
+On initial installation, run:
+
+```bash
+mp config init
+```
+
+It'll create a new file located at `~/.config/metaprocessor/config.toml` and open it in your default editor (vim if `$EDITOR` is not set).
+
+Interactive setup is also avaiable, run:
+
+```bash
+mp config init --interactive
+```
+
