mp config: docs update

--- a/docs/pages/docs/config.mdx
+++ b/docs/pages/docs/config.mdx
@@ -128,6 +128,8 @@ This option is to specify the location of the global data storage, it is used to
 
 ##### Note
 
+Although relative paths are supported, it is recommended to use absolute paths.
+
 If you are using the optional daemon, you should specify a location that is accessible by the daemon with correct permissions.
 
 #### `general.gp-regex`
