--- a/docs/pages/docs/object.mdx
+++ b/docs/pages/docs/object.mdx
@@ -3,7 +3,7 @@ title: "Session Data Management"
 description: "MetaProcessor's session data management tool."
 ---
 
-# Session Data Management
+# Session Management
 
 This section covers MetaProcessor's session data management tool.
 
