change org owner

--- a/docs/pages/docs/develop.mdx
+++ b/docs/pages/docs/develop.mdx
@@ -5,7 +5,7 @@ description: "Extending MetaProcessor, adding new biomarkers or new CLI function
 
 # Extending MetaProcessor
 
-You can extend MetaProcessor by forking the [repository](https://github.com/metaprocessor/metaprocessor).
+You can extend MetaProcessor by forking the [repository](https://github.com/stepbrobd/metaprocessor).
 If you find your extension useful and should be made generally available, please consider contributing it back to the project.
 
 ## Development
@@ -17,7 +17,7 @@ or the [Determinate Nix Installer](https://github.com/DeterminateSystems/nix-ins
 With Nix installed, you can a start development shell with all the dependencies needed to build MetaProcessor with [`direnv`](https://direnv.net):
 
 ```shell
-git clone git@github.com:metaprocessor/metaprocessor.git && cd metaprocessor && direnv allow
+git clone git@github.com:stepbrobd/metaprocessor.git && cd metaprocessor && direnv allow
 ```
 
 After the console stops making outputs, MetaProcessor is already installed (editable) in your environment.
