docs: add usages for running workflows, and fix incomplete ones

--- a/docs/pages/docs/develop.mdx
+++ b/docs/pages/docs/develop.mdx
@@ -12,7 +12,7 @@ If you find your extension useful and should be made generally available, please
 
 MetaProcessor is built using [Nix](https://nixos.org), to reduce the complexity of setting up the development environment.
 To get started, install Nix on your system using either the official [installation instructions](https://nixos.org/download.html)
-or the [Determinate Nix Installer](https://github.com/DeterminateSystems/nix-installer)(recommended).
+or the [Determinate Nix Installer](https://github.com/determinatesystems/nix-installer)(recommended).
 
 With Nix installed, you can a start development shell with all the dependencies needed to build MetaProcessor with [`direnv`](https://direnv.net):
 
@@ -29,6 +29,16 @@ mp --help
 ```
 
 After this, change the remote to your fork and start hacking!
+
+**Additional Resources**:
+
+- [`git`](https://git-scm.com)
+- [`direnv`](https://direnv.net)
+  + [installation](https://direnv.net/docs/installation.html)
+- [`nix`](https://nixos.org)
+  + [installation](https://nixos.org/download.html)
+  + [manual](https://nixos.org/manual/nix/stable/)
+  + [Nix Pills](https://nixos.org/guides/nix-pills/)
 
 ## Contributing
 
