--- a/docs/pages/docs/object.mdx
+++ b/docs/pages/docs/object.mdx
@@ -51,13 +51,19 @@ For more information, run `mp object ls --help`.
 
 Move (or rename) objects managed by MetaProcessor.
 
+On roadmap, not implemented yet.
+
 ## Remove Objects
 
 Delete objects from MetaProcessor, local file system, or remote object store service provider.
 
+On roadmap, not implemented yet.
+
 ## Upload Objects
 
 Upload objects to remote object store service provider.
+
+On roadmap, not implemented yet.
 
 ## Download Objects
 
