fix report generation and add docs

--- a/docs/pages/docs/develop.mdx
+++ b/docs/pages/docs/develop.mdx
@@ -34,11 +34,11 @@ After this, change the remote to your fork and start hacking!
 
 - [`git`](https://git-scm.com)
 - [`direnv`](https://direnv.net)
-  + [installation](https://direnv.net/docs/installation.html)
+  - [installation](https://direnv.net/docs/installation.html)
 - [`nix`](https://nixos.org)
-  + [installation](https://nixos.org/download.html)
-  + [manual](https://nixos.org/manual/nix/stable/)
-  + [Nix Pills](https://nixos.org/guides/nix-pills/)
+  - [installation](https://nixos.org/download.html)
+  - [manual](https://nixos.org/manual/nix/stable/)
+  - [Nix Pills](https://nixos.org/guides/nix-pills/)
 
 ## Contributing
 
